--- a/server/plugins/Terraria/Data/menus.yml
+++ b/server/plugins/Terraria/Data/menus.yml
@@ -90,7 +90,6 @@ intro:
             - §r您可以基于您的喜好个性化部分游戏体验
             - §r总体而言，此部分包括以下方面的设置：
             - §b- 泰拉瑞亚第三人称视角（比原版更远）
-            - §b- 粒子量、粒子特效开关
             - §b- UI大小（物品栏中物品信息的显示大小仍由Minecraft的界面尺寸设置决定）
             - §b- 辅助瞄准功能
             - §b- 各种键位绑定（现有按键均可自由设置）
@@ -100,8 +99,10 @@ intro:
             col: 4
             name: §r[信息] 鸣谢
             lore:
-            - §r感谢中/英文灾厄Wiki、Terraria Wiki提供的信息
+            - §r感谢来源于中/英文灾厄Wiki、Terraria Wiki的信息和贴图
             - §r感谢KuLou_D制作的长直模型
+            - §r感谢潮汐之月制作的天蓝套模型
+            - §r感谢天狼星_HMS_Sirius在编写配置文件工作中提供的帮助
             - §r感谢群友们的陪伴支持
         back:
             row: 5
@@ -123,8 +124,6 @@ biomes:
             name: §r[信息] 世界生成
             lore:
             - §r世界中会生成各种矿物，包括空中的起源之簇与地上的陨石坑
-            - §a考虑到长期多人服务器中新手的游戏体验，世界中不会生成宝箱等战利品
-            - §a与之相对，新手礼包将囊括更多物品以保证新手开荒体验
             - §r世界中会生成铁轨网络；早期玩家即可制作矿车以更快地跑图、寻找生物群系
             - §r服务器的文件夹中会自动生成出生点附近的生物群系地图，服主可考虑向玩家公开以进一步保证跑图体验
         worldInfo:
@@ -678,7 +677,7 @@ bossSLMG:
             - §r第一阶段时，黑檀与血化史莱姆将造成主要威胁
             - §r两者均会跃向玩家，落地时发射大量预判弹幕
             - §r距离玩家较远时跳跃能力受到极大增强
-            - §r两者被击败后均可分裂2次；分裂后的史莱姆更小，生命值更低且发射弹幕数量减少
+            - §r两者均可在生命值较低时分裂2次；分裂后的史莱姆更小，平分剩余生命值且发射弹幕数量减少
             - §r此时，史莱姆之神本体将向玩家径直发起冲撞
             - §r所有史莱姆被击败后进入第二阶段
         attack2:
@@ -686,7 +685,7 @@ bossSLMG:
             col: 2
             name: §r[信息] 攻击方式-第二阶段
             lore:
-            - §r第二阶段时，BOSS的攻击方式如此循环：
+            - §r第二阶段时，史莱姆之神本体的攻击方式如此循环：
             - §r- 快速根据玩家的加速度发射预判弹幕；每次发射一枚
             - §r- 进行一次预判冲撞
             - §r此时击败仅剩的本体即可结束战斗
@@ -701,7 +700,7 @@ bossSLMG:
             - §r亦可观察根据当前移动方向预判而来的弹道以便及时变向
             - §r尽可能使用克苏鲁之眼盾的冲撞来躲避第一阶段BOSS的直冲
             - §r即将进入第二阶段时注意观察BOSS位置
-            - §r第二阶段时频繁在AD之间切换骗预判弹幕，利用冲刺躲避冲撞
+            - §r第二阶段时频繁在左右移动之间切换骗预判弹幕，利用冲刺躲避冲撞
             - §r尽可能不要受到伤害；本BOSS的所有弹幕和史莱姆之神本体都有概率造成扭曲DEBUFF
             - §r扭曲DEBUFF会极大限制垂直方向走位空间
         back:
@@ -1395,11 +1394,10 @@ bossCLMTC:
         attack2:
             row: 2
             col: 2
-            name: §r[信息] 攻击方式-弹幕炼狱
+            name: §r[信息] 攻击方式-弹幕炼狱I
             lore:
-            - §r- 第一轮弹幕炼狱由深渊亡魂组成
-            - §r- 第二轮弹幕炼狱在此基础上增加了会追踪并爆炸成八枚硫火飞弹的弹幕
-            - §r- 玩家在弹幕炼狱期间下线或被击杀将重置弹幕炼狱时长
+            - §r- 第一轮弹幕炼狱期间，BOSS会向上方发射主弹幕
+            - §r- 主弹幕会向玩家预判发射深渊亡魂
         attack3:
             row: 2
             col: 3
@@ -1410,6 +1408,13 @@ bossCLMTC:
             - §r- “灾祸”：与第二阶段魔焰眼类似，向玩家喷吐大量火球后进行5次冲刺
             - §r- “灾祸”的第五次冲刺持续时间稍短于其余冲刺
             - §r- “灾厄之眼”在此期间只会在玩家上方发射爆炸弹幕
+        attack4:
+            row: 2
+            col: 4
+            name: §r[信息] 攻击方式-弹幕炼狱II
+            lore:
+            - §r- 第二轮弹幕炼狱期间，BOSS会向下方发射主弹幕
+            - §r- 主弹幕会爆裂成带有预判性质的深渊亡魂
         tutorial1:
             row: 3
             col: 1
@@ -1418,7 +1423,7 @@ bossCLMTC:
             - §r在BOSS使用爆炸弹幕攻击时，避免完全垂直移动
             - §r在“灾祸”存活时，切记留意冲刺次数；第五次冲刺开始后向冲刺反方向移动避免被火球灼烧
             - §r在略微离开地面的位置建造玻璃平台以更好地看清弹幕炼狱
-            - §r设置好泰拉瑞亚第三人称视角距离以在弹幕炼狱时获得更好的视野
+            - §r弹幕炼狱弹幕带有预判性质，注意变向移动和随机应变
             - §r两兄弟被击败后，注意在灾厄之眼冲撞后冲刺保持距离并及时变向躲避预判弹幕
         back:
             row: 5
@@ -1805,9 +1810,10 @@ bossDKFSR:
             col: 3
             name: §r[信息] 攻击方式-第三阶段
             lore:
-            - §r- 隐身，传送到玩家身边并直冲一次
-            - §r- 隐身，传送到玩家身边并直冲两次
-            - §r- 隐身，传送到玩家身边并直冲三次
+            - §r- 隐身，传送到玩家身边并冲刺一次
+            - §r- 隐身，传送到玩家身边并冲刺两次
+            - §r- 隐身，传送到玩家身边并冲刺三次
+            - §r每轮连续冲刺的第一次为预判冲刺，其余为直冲
             - §r在生命值低于20%时进入第四阶段
         attack4:
             row: 2
@@ -1825,7 +1831,7 @@ bossDKFSR:
             - §r幽魂套装可以为队友提供续航；单人挑战由于坦度和伤害过低不太推荐
             - §r对单武器与高效清理泡泡的武器均有用武之地
             - §r留意骗一二阶段的预判冲刺，不要直线走位
-            - §r三四阶段难度相对不高，保持移动即可
+            - §r三四阶段注意记录冲刺节奏，骗每轮的第一次冲刺预判
         back:
             row: 5
             col: 4
@@ -2421,8 +2427,7 @@ bossCSLSV:
             - §r可考虑在大量旋臂的半径都与自身接近时钻入内圈减轻走位压力
             - §r无尽虚空本体会造成难以想象的高接触伤害，钻内圈时稍加小心
             - §r无尽虚空的引力与距离的平方成正比；这使得BOSS战的中后期走位空间进一步受限
-            - §r本次BOSS战需要对单武器对抗弹幕阶段，对群武器对抗暗能量阶段
-            - §r使用对单武器集火使暗能量迅速减员减缓走位压力也不失为一种选择
+            - §r本次BOSS战需要准备对单和对群武器，用以对抗弹幕阶段和暗能量阶段
         back:
             row: 5
             col: 4
@@ -2512,7 +2517,7 @@ bossPTGST:
             - §r- 向玩家发射三次弹幕墙
             - §r- 向上飞行，然后进行一次直冲
             - §r在生命值低于90%时进入第二阶段
-            - §r进入第二阶段时，伤害会有所提升，而防御有所减少
+            - §r进入第二阶段时，防御有所减少
         attack2:
             row: 2
             col: 2
@@ -2521,7 +2526,7 @@ bossPTGST:
             - §r- 向玩家发射两次弹幕墙
             - §r- 向上飞行，然后进行两次直冲
             - §r在生命值低于60%时召唤一只克隆体并进入第三阶段
-            - §r进入第三阶段时伤害会进一步提升，而防御再次减少
+            - §r进入第三阶段时防御再次减少
         attack3:
             row: 2
             col: 3
@@ -2906,37 +2911,17 @@ bossCLMTS:
         attack2:
             row: 2
             col: 2
-            name: §r[信息] 攻击方式-召唤兄弟
-            lore:
-            - §r在生命值达到45%时召唤兄弟
-            - §r兄弟会为至尊灾厄抵挡伤害并攻击玩家
-            - §r至尊灾难射出加速的斩魂幻锋
-            - §r至尊灾祸射出硫火碎魂拳
-            - §r一开始，两者均单发射出弹幕
-            - §r生命值降至70%时发射频率增加
-            - §r生命值降至40%时每四次攻击发射一次弹幕墙
-        attack3:
-            row: 2
-            col: 3
-            name: §r[信息] 攻击方式-召唤灾坟魔物
-            lore:
-            - §r第一次弹幕炼狱结束后和生命值降低到20%时召唤灾坟魔物
-            - §r灾坟魔物是一个长直类敌人
-            - §r它会从头到尾对玩家直射出硫火飞弹
-        attack4:
-            row: 2
-            col: 4
             name: §r[信息] 攻击方式-至尊灾厄
             lore:
             - §r至尊灾厄在发射弹幕时会保持和玩家平齐
             - §r硫火飞弹：发射硫火飞弹组成的弹幕墙
             - §r深渊亡魂：预判玩家的速度发射快速的深渊亡魂
-            - §r深渊炙炎：发射追踪并爆炸成大量硫火飞弹的深渊炙炎
+            - §r深渊炙炎：发射追踪并爆炸成大量深渊亡魂的深渊炙炎
             - §r冲刺：向玩家进行预判冲刺
-        attack5:
+        attack3:
             row: 2
-            col: 5
-            name: §r[信息] 攻击顺序-至尊灾厄
+            col: 3
+            name: §r[信息] 攻击顺序-常态
             lore:
             - §r硫火飞弹x3-深渊亡魂-深渊炙炎x2-冲刺x4
             - §r深渊炙炎x2-深渊亡魂-硫火飞弹x3-冲刺x2
@@ -2944,21 +2929,67 @@ bossCLMTS:
             - §r冲刺x2-硫火飞弹x3-深渊炙炎x4-冲刺x4
             - §r硫火飞弹x3-冲刺x2-硫火飞弹x3-冲刺x2-硫火飞弹x3
             - §r在生命值低于45%时，冲刺的次数减半，硫火飞弹减少一轮
+        attack4:
+            row: 2
+            col: 4
+            name: §r[信息] 攻击方式-召唤单位
+            lore:
+            - §r在生命值达到45%时召唤兄弟
+            - §r- 兄弟会为至尊灾厄抵挡伤害并攻击玩家
+            - §r- 至尊灾难射出加速的斩魂幻锋
+            - §r- 至尊灾祸射出硫火碎魂拳
+            - §r- 一开始，两者均单发射出弹幕
+            - §r- 生命值降至70%时发射频率增加
+            - §r- 生命值降至40%时每四次攻击发射一次弹幕墙
+            - §r第一次弹幕炼狱结束后和生命值降低到20%时召唤灾坟魔物
+            - §r- 灾坟魔物是一个长直类敌人
+            - §r- 它会从头到尾对玩家直射出硫火飞弹
+        attack5:
+            row: 2
+            col: 5
+            name: §r[信息] 攻击方式-弹幕炼狱I/II
+            lore:
+            - §r第一轮弹幕炼狱：于召唤时开始
+            - §r- BOSS向上方发射主弹幕
+            - §r- 主弹幕会爆裂成一片带有预判性质的稀疏弹幕墙
+            - §r第二轮弹幕炼狱：于生命值到达75%时开始
+            - §r- 每次射出水平和垂直方向的两个弹幕轮
+            - §r- 弹幕轮的性质与犽戎的火球圈相似，但旋转速度较低
+        attack6:
+            row: 2
+            col: 6
+            name: §r[信息] 攻击方式-弹幕炼狱III/IV
+            lore:
+            - §r第三轮弹幕炼狱：于生命值到达50%时开始
+            - §r- BOSS会以类似于硫磺火元素的方式发射硫火飞弹与深渊亡魂
+            - §r- 二者皆有预判性质
+            - §r第四轮弹幕炼狱：于生命值到达30%时开始
+            - §r- BOSS会向下发射主弹幕
+            - §r- 主弹幕会爆裂成预判的深渊亡魂
+            - §r- 每隔几次攻击的主弹幕都会爆裂成弹幕墙
+        attack7:
+            row: 2
+            col: 7
+            name: §r[信息] 攻击方式-弹幕炼狱V
+            lore:
+            - §r第五轮弹幕炼狱：于生命值到达10%时开始
+            - §r- 向玩家射出深渊亡魂弹幕墙
+            - §r- 深渊亡魂在短暂停顿后会再次追向玩家
         tutorial1:
             row: 3
             col: 1
             name: §r[信息] 打法攻略
             lore:
             - §r星流巨械提供的武器和装备可提供一定帮助
-            - §r灾坟魔物可用对群武器尽快清理；其他部分建议使用对单武器
-            - §r可以通过快速移动躲避弹幕炼狱防止大量弹幕堆积无法走位
-            - §r对走位很自信的话，星流巨械的坐骑可以帮助躲避弹幕炼狱
-            - §r躲避深渊亡魂可以在自由落体的时候左右晃
-            - §r保持垂直移动以避免被深渊炙炎弹幕贴脸
-            - §r常态攻击的手短较为单一且相对容易，可考虑在常态攻击时恢复生命
-            - §r兄弟阶段初期同理，可暂缓攻击BOSS以等待状态恢复
+            - §r灾坟魔物建议用对群武器优先清理；其他部分建议使用对单武器
+            - §r不要一昧地远离BOSS冲刺的落点，可能导致下次冲刺后释放的技能无法躲避
+            - §r常态下保持垂直移动，配合冲刺以避免被深渊炙炎弹幕贴脸
+            - §r兄弟阶段初期的攻击手段相对简单，可考虑在此时拖延进攻以恢复生命
             - §r尽量避免双兄弟同时进入残血状态，这会导致弹幕过多难以躲避
-            - §r不要一昧地远离冲刺方向，可能导致下次冲刺或释放的技能无法躲避
+            - §r弹幕炼狱I/III/IV：左右移动骗预判，随机应变躲弹幕
+            - §r弹幕炼狱II：向后移动+冲刺；左右移动和上下移动来对齐弹幕缝隙
+            - §r弹幕炼狱IV：快速落地，弹幕炼狱开始后点按飞行保持向上移动（可用进升证章保证飞行时间）
+            - §r弹幕炼狱V：在快速飞行和自由落体间切换，用冲刺保证末端速度
         back:
             row: 5
             col: 4
