--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -17662,7 +17662,7 @@ Dodu的手炮:
   item: RAW_FISH
   lore:
   - §r使用恢复480生命值
-  - §r给予增益，提升生命再生效果10秒钟
+  - §r提升生命再生效果10秒钟
   worth: 5000000
   rarity: 12
 附魔星鱼:
