--- a/server/plugins/DragonCore/EntityModel.yml
+++ b/server/plugins/DragonCore/EntityModel.yml
@@ -1,343 +1,343 @@
 荒漠灾虫头:
   entity: "荒漠灾虫头"
   contains: false
-  model: "荒漠灾虫/头/head.obj"
-  texture: "荒漠灾虫/头/head.png"
+  model: "hmzc/t/head.obj"
+  texture: "hmzc/t/head.png"
   scale: 65
   renderAlways: true
 荒漠灾虫体节:
   entity: "荒漠灾虫体节"
   contains: false
-  model: "荒漠灾虫/体节/body.obj"
-  texture: "荒漠灾虫/体节/body.png"
+  model: "hmzc/tj/body.obj"
+  texture: "hmzc/tj/body.png"
   scale: 65
   renderAlways: true
 荒漠灾虫尾:
   entity: "荒漠灾虫尾"
   contains: false
-  model: "荒漠灾虫/尾/tail.obj"
-  texture: "荒漠灾虫/尾/tail.png"
+  model: "hmzc/w/tail.obj"
+  texture: "hmzc/w/tail.png"
   scale: 65
   renderAlways: true
 黄沙恶虫头:
   entity: "黄沙恶虫头"
   contains: false
-  model: "荒漠灾虫/头/head.obj"
-  texture: "荒漠灾虫/头/head.png"
+  model: "hmzc/t/head.obj"
+  texture: "hmzc/t/head.png"
   scale: 32
   renderAlways: true
 黄沙恶虫体节:
   entity: "黄沙恶虫体节"
   contains: false
-  model: "荒漠灾虫/体节/body.obj"
-  texture: "荒漠灾虫/体节/body.png"
+  model: "hmzc/tj/body.obj"
+  texture: "hmzc/tj/body.png"
   scale: 32
   renderAlways: true
 黄沙恶虫尾:
   entity: "黄沙恶虫尾"
   contains: false
-  model: "荒漠灾虫/尾/tail.obj"
-  texture: "荒漠灾虫/尾/tail.png"
+  model: "hmzc/w/tail.obj"
+  texture: "hmzc/w/tail.png"
   scale: 32
   renderAlways: true
 菌生蟹:
   entity: "菌生蟹"
   contains: false
-  model: "菌生蟹/ai_model.obj"
-  texture: "菌生蟹/ai_model.jpg"
+  model: "jsx/ai_model.obj"
+  texture: "jsx/ai_model.jpg"
   scale: 128
   renderAlways: true
 腐巢意志:
   entity: "腐巢意志"
   contains: false
-  model: "腐巢意志/ai_model.obj"
-  texture: "腐巢意志/ai_model.png"
+  model: "fcyz/ai_model.obj"
+  texture: "fcyz/ai_model.png"
   scale: 128
   renderAlways: true
 渊海灾虫头:
   entity: "渊海灾虫头"
   contains: false
-  model: "渊海灾虫/头/custom_model.obj"
-  texture: "渊海灾虫/头/texture.png"
+  model: "yhzc/t/custom_model.obj"
+  texture: "yhzc/t/texture.png"
   scale: 45
   renderAlways: true
 渊海灾虫体节:
   entity: "渊海灾虫体节"
   contains: false
-  model: "渊海灾虫/体节/custom_model.obj"
-  texture: "渊海灾虫/体节/texture.png"
+  model: "yhzc/tj/custom_model.obj"
+  texture: "yhzc/tj/texture.png"
   scale: 45
   renderAlways: true
 渊海灾虫尾:
   entity: "渊海灾虫尾"
   contains: false
-  model: "渊海灾虫/尾/custom_model.obj"
-  texture: "渊海灾虫/尾/texture.png"
+  model: "yhzc/w/custom_model.obj"
+  texture: "yhzc/w/texture.png"
   scale: 45
   renderAlways: true
 硫磺火元素:
   entity: "硫磺火元素"
   contains: false
-  model: "硫磺火元素/ai_model.obj"
-  texture: "硫磺火元素/ai_model.png"
+  model: "lhhys/ai_model.obj"
+  texture: "lhhys/ai_model.png"
   scale: 80
   renderAlways: true
 利维坦:
   entity: "利维坦"
   contains: true
-  model: "利维坦/ai_model.obj"
-  texture: "利维坦/ai_model.png"
+  model: "lwt/ai_model.obj"
+  texture: "lwt/ai_model.png"
   scale: 640
   renderAlways: true
 白金星舰:
   entity: "白金星舰"
   contains: true
-  model: "白金星舰/custom_model.obj"
-  texture: "白金星舰/texture.png"
+  model: "bjxj/custom_model.obj"
+  texture: "bjxj/texture.png"
   scale: 20
   renderAlways: true
 瘟疫使者歌莉娅:
   entity: "瘟疫使者歌莉娅"
   contains: true
-  model: "瘟疫使者歌莉娅/ai_model.obj"
-  texture: "瘟疫使者歌莉娅/ai_model.png"
+  model: "wyszgly/ai_model.obj"
+  texture: "wyszgly/ai_model.png"
   scale: 200
   renderAlways: true
 猪鲨公爵:
   entity: "猪鲨公爵"
   contains: true
-  model: "猪鲨公爵/猪鲨公爵/ai_model.obj"
-  texture: "猪鲨公爵/猪鲨公爵/ai_model.png"
+  model: "zsgj/zsgj/ai_model.obj"
+  texture: "zsgj/zsgj/ai_model.png"
   scale: 128
   renderAlways: true
 龙卷鲨:
   entity: "龙卷鲨"
   contains: true
-  model: "猪鲨公爵/龙卷鲨/ai_model.obj"
-  texture: "猪鲨公爵/龙卷鲨/ai_model.png"
+  model: "zsgj/ljs/ai_model.obj"
+  texture: "zsgj/ljs/ai_model.png"
   scale: 64
   renderAlways: false
 星神游龙头:
   entity: "星神游龙头"
   contains: false
-  model: "星神游龙/头/head.obj"
-  texture: "星神游龙/头/head.png"
+  model: "xsyl/t/head.obj"
+  texture: "xsyl/t/head.png"
   scale: 100
   renderAlways: true
 星神游龙体节:
   entity: "星神游龙体节"
   contains: false
-  model: "星神游龙/体节/body.obj"
-  texture: "星神游龙/体节/body.png"
+  model: "xsyl/tj/body.obj"
+  texture: "xsyl/tj/body.png"
   scale: 100
   renderAlways: true
 星神游龙尾:
   entity: "星神游龙尾"
   contains: false
-  model: "星神游龙/体节/body.obj"
-  texture: "星神游龙/体节/body.png"
+  model: "xsyl/tj/body.obj"
+  texture: "xsyl/tj/body.png"
   scale: 100
   renderAlways: true
 痴愚金龙:
   entity: "痴愚金龙"
   contains: false
-  model: "痴愚金龙/ai_model.obj"
-  texture: "痴愚金龙/ai_model.png"
+  model: "cylj/ai_model.obj"
+  texture: "cylj/ai_model.png"
   scale: 196
   renderAlways: true
 亵渎天神:
   entity: "亵渎天神，普罗维登斯"
   contains: false
-  model: "亵渎天神/ai_model.obj"
-  texture: "亵渎天神/ai_model.png"
+  model: "xdts/ai_model.obj"
+  texture: "xdts/ai_model.png"
   scale: 416
   renderAlways: true
 装甲风暴编织者头:
   entity: "装甲风暴编织者头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/StormWeaverArmored.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/StormWeaverArmored.png"
   scale: 55
   renderAlways: true
 装甲风暴编织者体节:
   entity: "装甲风暴编织者体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/StormWeaverArmored.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/StormWeaverArmored.png"
   scale: 55
   renderAlways: true
 装甲风暴编织者尾:
   entity: "装甲风暴编织者尾"
   contains: false
-  model: "神明吞噬者/尾/tail.obj"
-  texture: "神明吞噬者/StormWeaverArmored.png"
+  model: "smtsz/w/tail.obj"
+  texture: "smtsz/StormWeaverArmored.png"
   scale: 55
   renderAlways: true
 风暴编织者头:
   entity: "风暴编织者头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/StormWeaver.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/StormWeaver.png"
   scale: 50
   renderAlways: true
 风暴编织者体节:
   entity: "风暴编织者体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/StormWeaver.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/StormWeaver.png"
   scale: 50
   renderAlways: true
 风暴编织者尾:
   entity: "风暴编织者尾"
   contains: false
-  model: "神明吞噬者/尾/tail.obj"
-  texture: "神明吞噬者/StormWeaver.png"
+  model: "smtsz/w/tail.obj"
+  texture: "smtsz/StormWeaver.png"
   scale: 50
   renderAlways: true
 西格纳斯:
   entity: "神之使徒西格纳斯"
   contains: false
-  model: "西格纳斯/ai_model.obj"
-  texture: "西格纳斯/ai_model.png"
+  model: "xgns/ai_model.obj"
+  texture: "xgns/ai_model.png"
   scale: 100
   renderAlways: true
 装甲神明吞噬者头:
   entity: "装甲神明吞噬者头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 装甲神明吞噬者体节:
   entity: "装甲神明吞噬者体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 装甲神明吞噬者尾:
   entity: "装甲神明吞噬者尾"
   contains: false
-  model: "神明吞噬者/尾/tail.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/w/tail.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 神明吞噬者头:
   entity: "神明吞噬者头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 神明吞噬者体节:
   entity: "神明吞噬者体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 神明吞噬者尾:
   entity: "神明吞噬者尾"
   contains: false
-  model: "神明吞噬者/尾/tail.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/w/tail.obj"
+  texture: "smtsz/DoG.png"
   scale: 70
   renderAlways: true
 小星宇神卫头:
   entity: "小星宇神卫头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/DoG.png"
   scale: 12
   renderAlways: true
 小星宇神卫体节:
   entity: "小星宇神卫"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/DoG.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/DoG.png"
   scale: 12
   renderAlways: true
 犽戎:
   entity: "丛林龙，犽戎"
   contains: false
-  model: "犽戎/ai_model.obj"
-  texture: "犽戎/ai_model.png"
+  model: "yr/ai_model.obj"
+  texture: "yr/ai_model.png"
   scale: 256
   renderAlways: true
 灾坟魔物头:
   entity: "灾坟魔物头"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 50
   renderAlways: true
 灾坟魔物体节:
   entity: "灾坟魔物体节"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 50
   renderAlways: true
 灾坟魔物尾:
   entity: "灾坟魔物尾"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 50
   renderAlways: true
 灾坟仆从:
   entity: "灾坟仆从"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 18
   renderAlways: true
 灾坟仆从体节:
   entity: "灾坟仆从体节"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 18
   renderAlways: true
 灾坟仆从尾:
   entity: "灾坟仆从尾"
   contains: false
-  model: "灾坟魔物/CustomModel.obj"
-  texture: "灾坟魔物/texture.png"
+  model: "zfmw/CustomModel.obj"
+  texture: "zfmw/texture.png"
   scale: 18
   renderAlways: true
 塔纳托斯头:
   entity: "XM-05“塔纳托斯”头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/Thanatos.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/Thanatos.png"
   scale: 60
   renderAlways: true
 塔纳托斯激光头:
   entity: "XM-05“塔纳托斯”激光头"
   contains: false
-  model: "神明吞噬者/头/head.obj"
-  texture: "神明吞噬者/ThanatosOpen.png"
+  model: "smtsz/t/head.obj"
+  texture: "smtsz/ThanatosOpen.png"
   scale: 60
   renderAlways: true
 塔纳托斯体节:
   entity: "XM-05“塔纳托斯”体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/Thanatos.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/Thanatos.png"
   scale: 60
   renderAlways: true
 塔纳托斯散热体节:
   entity: "XM-05“塔纳托斯”散热体节"
   contains: false
-  model: "神明吞噬者/体节/body.obj"
-  texture: "神明吞噬者/ThanatosOpen.png"
+  model: "smtsz/tj/body.obj"
+  texture: "smtsz/ThanatosOpen.png"
   scale: 60
   renderAlways: true
 塔纳托斯尾:
   entity: "XM-05“塔纳托斯”尾"
   contains: false
-  model: "神明吞噬者/尾/tail.obj"
-  texture: "神明吞噬者/Thanatos.png"
+  model: "smtsz/w/tail.obj"
+  texture: "smtsz/Thanatos.png"
   scale: 60
   renderAlways: true
