--- a/server/plugins/Terraria/Data/NPC.yml
+++ b/server/plugins/Terraria/Data/NPC.yml
@@ -153,7 +153,7 @@ messages:
     - 我一直好奇这样会（嘣！）额，那条腿…你还要的吧……
     - 手雷是新手对付一大批敌人的终极武器！
     - 炸弹和雷管，前期开矿时的好朋友！只是，用的时候记得保持距离……
-    - 你知道吗？炸弹和雷管在投出后切换到镐并挥舞一次将以对应的镐力判定破坏方块！
+    - 你知道吗？炸弹和雷管在投出后切换到镐将以对应的镐力判定破坏方块！
   渔夫:
     quest:
     - 我听说过有种<fishName>，你给我整一条来！
